# Image-Processing-Lab

./: CMakeLists.txt  ElabImage_2010.sln  README.txt
Debug/: Lab_session_4.ilk
Fruit-Inspection/: Fruit-Inspection.vcxproj
Lab_Session_1/: Lab_Session_1.vcxproj  Lab_Session_1.vcxproj.filters  lab_1.cpp
Lab_Session_1/Release/Lab_Session_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab_Session_1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab_Session_1_ex4/: Lab_Session_1_ex4.vcxproj  Lab_Session_1_ex4.vcxproj.filters  lab_1_ex_4.cpp
Lab_Session_1_ex4/Release/Lab_Sess.E7A4F947.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Lab_session_2/: Lab_2.cpp  Lab_session_2.vcxproj  Lab_session_2.vcxproj.filters  functions.cpp  functions.h
Lab_session_2/Release/Lab_session_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab_session_2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab_session_3/: Lab_3.cpp  Lab_session_3.vcxproj  Lab_session_3.vcxproj.filters
Lab_session_4/: Lab_session_4.vcxproj  Lab_session_4.vcxproj.filters  Local_Feature.cpp
OpenCV_test/: OpenCV_test.vcxproj  test.cpp
OpenCV_test/Release/OpenCV_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCV_test.lastbuildstate  OpenCV_test.write.1u.tlog  link.command.1.tlog  (+2 more)
Release/: Lab_Session_1.iobj  Lab_Session_1.ipdb  Lab_session_2.iobj  Lab_session_2.ipdb  OpenCV_test.iobj  OpenCV_test.ipdb
calib/: calib.cpp  calib.vcxproj  calib.vcxproj.filters
videos/: calibVideo.avi  seq_short.avi
